# nitro

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  nitro.config.json
agent-tests/: 01_basic_coherence.md  02_long_context_retrieval.md  03_tool_calling_agentic.md  04_chat_template_fidelity.md  05_kv_cache_stress.md  06_grammar_constrained_json.md  07_quantization_regression.md  08_performance_throughput.md  09_determinism_reproducibility.md  10_unicode_tokenizer_edge_cases.md  README.md
src/: agent_state.cpp  agent_state.h  config.cpp  config.h  curl.cpp  curl.h  input.cpp  input.h  input_event.h  input_history.h  json.cpp  json.h  llama-sb-rag.cpp  llama-sb-rag.h  llama-sb.cpp  llama-sb.h  logging.cpp  logging.h  main.cpp  mcp-client.cpp  mcp-client.h  prompt.cpp  tui.cpp  tui.h  tui_base.cpp  tui_base.h  tui_context.h  tui_state.cpp  tui_state.h  utils.cpp  utils.h
